# MCP-Add-Weather

./: READ.ME  README.md  client.py  client_local_ollama.py  main.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
