[project]
name = "mcp-krishnaik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=0.3.5",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.0",
    "mcp>=1.10.1",
    "streamlit>=1.46.1",
]
